# AI-based-loan-eligibility-and-credit-decision-system

./: .env.example  .gitignore  README.md  implementation_plan.md  main.py  pyproject.toml  requirements.txt
api/: __init__.py  main.py  schemas.py
api/routes/: __init__.py  explain.py  predict.py
api/services/: __init__.py  prediction.py
dashboard/: app.py
dashboard/components/: sidebar.py
dashboard/pages/: .gitkeep  1_🏠_Home.py  2_📊_Analytics.py  3_🤖_Predict.py  4_🔍_Explain.py  5_📈_Model.py
data/processed/: .gitkeep  eda_summary.json
data/raw/: .gitkeep
models/: .gitkeep
notebooks/: .gitkeep  01_eda.ipynb  02_preprocessing.ipynb  03_model_training.ipynb  04_evaluation.ipynb  05_explainability.ipynb
reports/: .gitkeep  model_comparison.json
src/: __init__.py  config.py
src/data/: __init__.py  loader.py  merger.py  preprocessor.py
src/explainability/: __init__.py  lime_explainer.py  shap_explainer.py
src/features/: __init__.py  engineer.py
src/models/: __init__.py  evaluator.py  trainer.py  tuner.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  test_api.py  test_explainer.py  test_preprocessor.py  test_trainer.py
